[package]
name = "forge"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Forge — the production line subsystem of the Onsager AI factory."

[dependencies]
onsager = { git = "https://github.com/onsager-ai/onsager.git", branch = "main" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
